# crucible

./: .gitignore  README.md  action.yml  mutation.json  pyproject.toml
.claude/skills/harden-tests/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  mutation.yml
.repo-sentinel/: report-2026-07-12.txt
docs/: MUTATION.md  QC-2026-07.md  RELATED-WORK.md  index.html
docs/assets/: demo.cast
docs/superpowers/: PROBE-RESULTS-3b.md  README.md
docs/superpowers/plans/: 2026-07-09-crucible-engine.md  2026-07-10-crucible-experiment.md  2026-07-11-plan3a-usable-tool-layer.md  2026-07-12-plan3b-lean-invocation.md  2026-07-12-plan3b2-public-flip.md
docs/superpowers/specs/: 2026-07-09-agentic-testing-framework-design.md  2026-07-11-plan3a-usable-tool-layer-design.md  2026-07-12-plan3b-lean-invocation-design.md  2026-07-12-plan3b2-public-flip-design.md
experiments/: DEVIATIONS.md  PROTOCOL-B.md  PROTOCOL.md  RESULTS-B.md  RESULTS.md  SELECTION.md  analyze.py  analyze_b.py  counted.json  prep.py  protocol-b.json  protocol.json  results-b.json  results.json  sensitivity_b.py  subjects.json  validate_b.py  validate_scopes.py
experiments/runs-b/graph-guard/loop-cross-rep1-20260713T220723Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/graph-guard/loop-cross-rep2-20260713T222357Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/graph-guard/loop-cross-rep3-20260713T223802Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/graph-guard/loop-cross-rep4-20260713T224726Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/graph-guard/loop-cross-rep5-20260713T230121Z/: meta.json  receipt.jsonl
experiments/runs-b/graph-guard/loop-cross-rep5-20260713T230236Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/graph-guard/loop-same-rep1-20260713T215431Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/graph-guard/loop-same-rep2-20260713T220912Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/graph-guard/loop-same-rep3-20260713T222544Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/graph-guard/loop-same-rep4-20260713T223941Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/graph-guard/loop-same-rep5-20260713T224922Z/: meta.json  result.json
experiments/runs-b/graph-guard/loop-same-rep5-20260713T225310Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/graph-guard/no-critic-rep1-20260713T215431Z/: meta.json
experiments/runs-b/graph-guard/no-critic-rep2-20260713T220912Z/: meta.json
experiments/runs-b/graph-guard/no-critic-rep3-20260713T222544Z/: meta.json  receipt.jsonl
experiments/runs-b/graph-guard/no-critic-rep4-20260713T223941Z/: meta.json
experiments/runs-b/graph-guard/no-critic-rep5-20260713T224922Z/: meta.json  receipt.jsonl
experiments/runs-b/graph-guard/no-critic-rep5-20260713T225309Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/loop-cross-rep1-20260713T215849Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/loop-cross-rep2-20260713T220423Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/loop-cross-rep3-20260713T220938Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/loop-cross-rep4-20260713T221440Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/loop-cross-rep5-20260713T221920Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/loop-same-rep1-20260713T215431Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/loop-same-rep2-20260713T220010Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/loop-same-rep3-20260713T220541Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/loop-same-rep4-20260713T221038Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/loop-same-rep5-20260713T221552Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/no-critic-rep1-20260713T215431Z/: meta.json
experiments/runs-b/idna/no-critic-rep2-20260713T220010Z/: meta.json  receipt.jsonl  result.json
experiments/runs-b/idna/no-critic-rep3-20260713T220541Z/: meta.json  receipt.jsonl
experiments/runs-b/idna/no-critic-rep4-20260713T221038Z/: meta.json  receipt.jsonl
experiments/runs-b/idna/no-critic-rep5-20260713T221552Z/: meta.json  receipt.jsonl
experiments/runs-b/packaging/loop-cross-rep1-20260713T220044Z/: meta.json  receipt.jsonl  result.json
paper/: DRAFT-v1-camera-ready.md  DRAFT-v2-two-experiments.md  DRAFT-v3-two-experiments.md  DRAFT-v4-two-experiments.md  DRAFT-v5-two-experiments.md  DRAFT-v6-two-experiments.md  arxiv-submission.tex  b-minimal-plan.json  fable-postlock-read-v4.txt  gpt-5.6-review-REJECT.txt  gpt-5.6-sol-review-v2-MAJOR-REVISION.txt  gpt-5.6-sol-review-v3-MAJOR-REVISION.txt  gpt-5.6-sol-review-v4-MINOR-REVISION.txt  gpt-5.6-sol-review-v4-final-ACCEPT.txt  gpt-5.6-sol-review-v6-editorial-ACCEPT.txt  references-verified.md  section-abstract-draft-v1.md  section-discussion-draft-v2.md  section-intro-draft-v1.md  section-method-draft-v3.md  section-relatedwork-draft-v1.md  section-results-draft-v2.md  section-threats-draft-v1.md
scripts/: isolation_probe.py  measure_tester.py
src/crucible/: __init__.py  cli.py  engine.py  env.py  experiment.py  experiment_b.py  guardrails.py  lean.py  loop.py  meter.py  providers_ext.py  receipts.py  report.py  roles.py  runner.py  scope.py  score.py
src/crucible/prompts/: critic.md  tester.md
tests/: test_analyze.py  test_analyze_b.py  test_cli.py  test_cli_e2e.py  test_engine.py  test_env.py  test_experiment.py  test_experiment_b.py  test_guardrails.py  test_lean.py  test_loop.py  test_meter.py  test_no_stale_claims.py  test_packaging.py  test_providers_ext.py  test_receipts.py  test_report.py  test_roles.py  test_runner.py  test_scope.py  test_score.py
tests/fixtures/subject/: .gitignore  pyproject.toml
(+514 files in other folders)
