[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible"
version = "0.1.0"
description = "Adversarial test-hardening loop for AI-built code: Tester vs Critic closing mutation feedback, mechanical verdicts, metered spend, receipts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeff Otterson" }]
dependencies = [
    "oracle-gate @ git+https://github.com/Jott2121/oracle-gate@main#subdirectory=tool",
    "agent-cost-attribution @ git+https://github.com/Jott2121/agent-cost-attribution@main",
    "mutmut>=3,<4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
crucible = "crucible.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: shells out to mutmut (minutes)",
    "integration: real model APIs (never in CI)",
]
addopts = "-m 'not integration' --ignore=tests/fixtures"
