[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible"
version = "0.1.0"
description = "Adversarial test-hardening loop for AI-built code: Tester vs Critic closing mutation feedback, mechanical verdicts, metered spend, receipts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jeff Otterson" }]
dependencies = [
    "oracle-gate @ git+https://github.com/Jott2121/oracle-gate@ce9b0b93ba59afa4598a85738db9abd7f975e8bc#subdirectory=tool",
    "agent-cost-attribution @ git+https://github.com/Jott2121/agent-cost-attribution@b502b093e5344beea06dcafcf32239e90302ddad",
    # Exact pin: scope.py's SRC_SHIM reads MUTANT_UNDER_TEST at call time -- a
    # mutmut 3.6.0 internal contract, not a public API (accepted residual, now pinned).
    "mutmut==3.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-cov>=7.1.0"]

[project.scripts]
crucible = "crucible.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crucible = ["prompts/*.md"]

[tool.coverage.run]
source = ["src/crucible"]

[tool.coverage.report]
# The build fails below this floor, so the suite cannot quietly rot.
# Held deliberately under the current number (94.7%) so honest refactors
# don't red the build, but a real regression does.
fail_under = 90
show_missing = true

[tool.mutmut]
source_paths = [
    "src/crucible/loop.py",
    "src/crucible/score.py",
    "src/crucible/guardrails.py",
    "src/crucible/report.py",
    "src/crucible/meter.py",
    "src/crucible/roles.py",
    "src/crucible/scope.py",
    "src/crucible/lean.py",
]
# --ignore=tests/test_analyze.py: it imports experiments/analyze.py, which is
# outside source_paths/also_copy so absent from mutmut's sandbox -- the same
# v6 hazard class crucible's own scope tool flags on subject repos.
# --ignore=tests/test_experiment_b.py: same class -- it reads the frozen
# experiments/protocol-b.json from disk, absent from the sandbox. Its loop.py
# use is monkeypatched anyway; the seeded_run mutation-killers live in
# tests/test_loop.py, which stays selected.
pytest_add_cli_args_test_selection = [
    "tests/",
    "--ignore=tests/test_analyze.py",
    "--ignore=tests/test_analyze_b.py",
    "--ignore=tests/test_experiment_b.py",
]
# also_copy: pytest_add_cli_args_test_selection = ["tests/"] collects the WHOLE
# suite, and several tests import crucible modules outside source_paths
# (engine.py, cli.py, etc). mutmut's sandbox only contains files listed in
# source_paths, so those imports raise ModuleNotFoundError inside the mutants/
# copy unless the rest of the package is also present (unmutated).
also_copy = ["src/crucible"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: shells out to mutmut (minutes)",
    "integration: real model APIs (never in CI)",
]
addopts = "-m 'not integration' --ignore=tests/fixtures"
